--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "building a twitter bot to combat morons",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon bot.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,9 @@
   },
   "homepage": "https://github.com/devugees/anti-moron-twitterbot#readme",
   "dependencies": {
+    "express": "^4.16.2",
     "fs": "^0.0.1-security",
+    "nodemon": "^1.14.12",
     "twit": "^2.2.9",
     "yarn-install": "^0.5.1"
   }
